# context-oriented-programming-research

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD-CONCEPT-COP.md  BUILD-INTERNALS.md  DEEP-ANALYSIS-COP.md  LICENSE  OPINION-COP.md  README.md  RESEARCH-COP.md  RESEARCH-FINDINGS.md  SPECIFICATION.md  pyproject.toml  requirements.txt  validate_cop.py
.cursor/rules/: cop-research.mdc  gilfoyle-review.mdc  python-dev.mdc
.github/workflows/: validate-cop.yml
cop/: __init__.py  __main__.py  cli.py  mcp_client.py
cop/commands/: __init__.py  build.py  doctor.py  extract.py  info.py  init.py  run.py  serve.py  validate.py  validate_dataset.py
cop/core/: __init__.py  package.py  validator.py
cop/pipeline/: __init__.py  chunker.py  constants.py  embeddings.py  indexer.py  linker.py  logger.py  resolver.py  synthetic.py
docs/: README.md
docs/research/: README.md  critical-feedback.md  key-findings.md  local-llm-pipeline.md  tool-comparison.md
docs/specification/: README.md  architecture.md
examples/customer-support-agent/: cop.yaml
examples/customer-support-agent/guardrails/: brand.yaml  compliance.yaml  safety.yaml
examples/customer-support-agent/knowledge/: faq.md  policies.md  products.json
examples/customer-support-agent/personas/: friendly.yaml  professional.yaml  technical.yaml
examples/customer-support-agent/prompts/: system.md
examples/customer-support-agent/tools/: create_ticket.yaml  lookup_order.yaml  process_refund.yaml
examples/playwright-test-agent/: README.md  cop.yaml
examples/playwright-test-agent/guardrails/: code-quality.yaml  safety.yaml  security.yaml
examples/playwright-test-agent/knowledge/: best-practices.md  common-patterns.md  selectors-guide.md
examples/playwright-test-agent/personas/: concise.yaml  helpful.yaml  (+1 more)
schemas/: README.md  cop-manifest.schema.json  guardrail.schema.json  persona.schema.json  test.schema.json  tool.schema.json
tests/validation/: invalid-guardrail.yaml  invalid-manifest.yaml  invalid-persona.yaml  invalid-test.yaml  invalid-tool.yaml  run_validation_tests.sh
(+13 files in other folders)
